Tweak styling on mobile schedule, fix time error in register section, add speaker

--- a/_sass/_screenbreaks.scss
+++ b/_sass/_screenbreaks.scss
@@ -338,4 +338,14 @@
             bottom: -250px;
         }
     }
+
+    section {
+        &#schedule {
+            .time-block {
+                .time {
+                    padding: 0 0.4em
+                }
+            }
+        }
+    }
 }
