--- a/assets/2017/css/style.scss
+++ b/assets/2017/css/style.scss
@@ -939,7 +939,7 @@ section {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: scroll;
     background: rgba(255,255,255, 0.8);
 
     .content {
